# cloudyview

./: .gitignore  README.md  create_shadow_test.py  create_test_cubes.py  pyproject.toml  test_cubes.nc
cloudyview/: __init__.py  appreciate.py  basic_render.py  expedition.py  glimpse.py  io.py  observe.py  odyssey.py  optical_depth.py  radiative_transfer.py
data/: test_cubes.nc  test_shadow.nc
